# euer

./: .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  README_NEXT.md  TESTING.md  Test Session Transcript.md  USER_GUIDE.md  backlog.md  euer.db  euer.py  migrate_excel.py  pyproject.toml  spec.md
.github/workflows/: ci.yml
docs/: USER_GUIDE.md
docs/templates/: Agent.md  Agents-Template.md  accountant-agent.md  onboarding-prompt.md
euercli/: cli.py  config.py  constants.py  db.py  importers.py  schema.py  utils.py
euercli/commands/: __init__.py  add.py  audit.py  config.py  delete.py  export.py  helpers.py  import_data.py  incomplete.py  init.py  list.py  private_summary.py  query.py  receipt.py  reconcile.py  setup.py  summary.py  update.py
euercli/services/: __init__.py  categories.py  duplicates.py  errors.py  expenses.py  income.py  models.py  private_classification.py  private_transfers.py  utils.py
exports/: EÜR_2026_Ausgaben.csv  EÜR_2026_Einnahmen.csv
scripts/: bump-version.sh
skills/euer-buchhaltung/: SKILL.md
specs/: 001-init.md  002-receipts.md  003-modularization-plan.md  003-modularization.md  004-taxation-logic.md  005-refactoring-for-open-core.md  006-payment-status.md  007-windows-compatibility.md  008-privateinlagen-privatentnahmen.md  009-service-layer-architektur.md  010-kontenrahmen.md
technical-documentation/: DEVELOPMENT.md  INCOMPLETE_ENTRIES_APPROACH.md
tests/: test_cli.py  test_config.py  test_services_categories.py  test_services_expenses.py  test_services_income.py  test_services_private_transfers.py
(+1 files in other folders)
