[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euercli"
version = "0.4.0"
description = "EÜR (Einnahmenüberschussrechnung) CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GNU AGPLv3"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1.0"]

[project.scripts]
euer = "euercli.cli:main"

[tool.setuptools]
packages = ["euercli", "euercli.commands", "euercli.services"]
